app/frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: note_ui
spec:
  selector:
    app: note_ui
  ports:
    - port: 80
      targetPort: 4173
  type: ClusterIP
